2013-04-27  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

        * utils/check.sh
        Fixed a few typos in comments

2013-04-12  Gregory Soyez  <soyez@fastjet.fr>

	* NEWS:
	* VERSION:
	prepared for 1.002 release

	* contribs.svn:
	GenericSubtractor switched to version 1.1.0 (was 1.0.0)

2013-02-23  Gavin Salam  <gavin.salam@cern.ch>

	* NEWS:
	* VERSION:
	prepared for 1.001 release

	* contribs.svn:
	added VariableR 1.0.1 and Nsubjettiness 1.0.2  (from Jesse Thaler)

	* configure:
	now outputs version of each contrib (+ other small formatting)

	* Makefile.in:
	distclean now removes Makefile and .Makefile.inc

2013-02-22  Gavin Salam  <gavin.salam@cern.ch>

	* utils/check.sh:
	now prints out the directory that it's running in

2013-02-21  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* DEVEL-GUIDELINES: 
	Rephrased sentence about registering a new contrib and the note
        note about retrieving a registered contrib using 
        scripts/update-contribs.sh ContribName trunk"


2013-02-21  Gregory Soyez  <soyez@fastjet.fr>

	* scripts/internal/Template/Makefile:
	added missing ; in make install

2013-02-21  Gavin Salam  <gavin.salam@cern.ch>

	* DEVEL-GUIDELINES: 
	added info on use of htpasswd to send us a password

	* scripts/internal/common.sh (svn_write): 
	switched write URL from svn+ssh -> https

2013-02-21  Gavin Salam  <gavin.salam@cern.ch>

	* README: 
	fixed type for http checkout

2013-02-07  Matteo Cacciari <cacciari@lpthe.jussieu.fr>

	* VERSION
	Pushed version to 1.000 for release

        * contribs.svn
	set version numbers to 1.0.0 for both GenericSubtractor and 
 	JetFFMoments

2013-02-06  Gavin SALAM  <salam@lpthe.jussieu.fr> + Matteo

	* scripts/internal/release-fjcontrib.sh:
	a few fixes wrt paths for the tarball, info on release date,
	parallel make, etc.

2013-02-06  Gavin SALAM  <salam@tycho.lpthe.jussieu.fr> + Matteo

	* scripts/update-contribs.sh: 
	now does "exit 1" if it couldn't find a given contrib version on
	the svn. 
